--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,7 +1,9 @@
 <h1 style="text-align:center">Room Listing</h1>
 <br>
- <%= link_to 'New Room', new_room_path %>
-<table class="table-striped" style="width:80%;text-align:center">
+<div style="padding-left: 15%">
+ <%= button_to('New Room', new_room_path, :method => "get" , :class => "btn btn-success btn-sm") %>
+ <br>
+<table border=1 class="table-striped table-hover" style="width:80%;text-align:center">
   <tr style="text-align:center">
     <th>Room Name</th>
     <th>Size</th>
@@ -14,8 +16,9 @@
 
       <td><%= room.size %></td>
 
-      <td> <%= button_to "New Booking", new_room_booking_path(room.id), :method => "get" %></td>
+      <td> <%= button_to("New Booking", new_room_booking_path(room.id), :method => "get" , :class =>"btn btn-primary btn-xs") %></td>
 
     </tr>
   <% end %>
 </table>
+</div>
