--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,17 +1,26 @@
+<div style="padding-left: 30%;padding-right: 40%">
 <%= form_for :room, url: rooms_path do |f| %>
+<p>
+<h3>Enter the details to create a new room</h3>
+</p>
   <p>
     <%= f.label :name%><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, style: 'width:80%' %>
   </p>
  
   <p>
     <%= f.label :size %><br>
-    <%= f.text_field :size %>
+    <%= f.text_field :size, style: 'width:80%' %>
   </p>
  
+  <p style="float: right">
+    <%= f.submit "Save Room", class: "btn-success", style: 'height:30px' %>
+    
+  </p>
   <p>
-    <%= f.submit %>
+  <%= link_to('Back', rooms_path, :class=>"btn btn-primary") %>
   </p>
   
 <% end %>
-<%= link_to 'Back', rooms_path %>
+
+</div>
