--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,4 +1,11 @@
-<h1 style="text-align:center">Room Listing</h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+<h3 style="text-align:center;color: white">Room Listing</h3>
+</nav>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <div style="padding-left: 15%">
  <%= button_to('New Room', new_room_path, :method => "get" , :class => "btn btn-success btn-sm") %>
