--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,21 @@
-<h5>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<h3 style="color: white;text-align: center;">Conference Room</h3>
+</nav>
+<br>
+<br>
+<br><br>
+<div class="container">
+<h3>
 	Hi there welcome to conference room app.
-</h5>
+</h3>
+<h5>You can use this app to create a room or book any existing room for any time-slot. </h5>
+
+<h5>You can create holidays so that rooms can't be booked on any pre defined holiday.</h5>
+<br>
 <p>
-Click here to go to rooms section where you can create a new room or check out exicting ones.
-  <%= link_to('Rooms', rooms_path, :class=>"btn btn-primary") %></p>
 
-<p>
+  <%= link_to('Rooms Section', rooms_path, :class=>"btn btn-primary btn-block") %>
+<%= link_to('Holiday Section', new_holiday_path, :class=>"btn btn-primary btn-block") %>
+  </p>
 
-Click here to create a new holiday
-
-  <%= link_to('Holiday', new_holiday_path, :class=>"btn btn-primary") %>
-
-</p>
+</div>
