--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -1,9 +1,12 @@
-  <div id="main-container" class="container">
+  <div  class="jumbotron">
       <div class="row">
 
        <div id="content" class="col-xs-9">
         
 <p>
+Holiday Created successfully
+<br>
+<br>
   <strong>Holiday Date:</strong>
   <%= @holiday.date %>
 </p>
