--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,18 +1,26 @@
-
+<nav class="navbar navbar-inverse navbar-fixed-top">
+<h3 style="color: white;text-align: center;">New Booking</h3>
+</nav>
+<br>
+<br>
+<br>
+<br>
+<div class="jumbotron">
 <%= form_for :booking , url: room_bookings_path do |f| %>
 
 
 <% if defined?(@booking.errors) %>
 <%= @booking.errors.full_messages.first %>
 <% end %>
-<h3>Room Name <%= @room.name %></h3>
-<h3>Room No <%= @room.id%></h3>
+<h4>Room Name: <%= @room.name %></h4>
+<h4>Room No: <%= @room.id%></h4>
+
+  </div>
+<div class="jumbotron">
 
 
     <%= f.label :starts_at %><br>
     <%= f.datetime_select :start %>
-  </div>
-
    <div class="field">
     <%= f.label :ends_at %><br>
     <%= f.datetime_select :end %>
@@ -24,7 +32,12 @@
 <%= f.hidden_field :room_id, :value=> @room.id %>
   <br>
   <p>
-    <%= f.submit %>
+
+        <%= f.submit "Create Booking", class: "btn-success btn ", style: 'height:30px' %>
+
   </p>
 <% end %>
-<%= link_to 'Back', room_bookings_path %>
+
+   <%= link_to('Back', room_bookings_path, :class=>"btn btn-primary") %>
+</div>
+</div>
