--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -1,6 +1,7 @@
+<div class="jumbotron" style="padding-left: 40%">
 <%= form_for :holiday , url: holidays_path do |f| %>
 <p>
-<%= f.label :Date%><br>
+<%= f.label :name, 'Holiday Date'%><br>
 <%= f.date_select :date %>
 </p>
   <p>
@@ -8,8 +9,11 @@
     <%= f.text_field :reason %>
   </p>
     <p>
-    <%= f.submit %>
+    <%= f.submit "Create Holiday", class: "btn-success btn", style: 'height:35px'  %>
+
+     <%= link_to('Back', holidays_path, :class=>"btn btn-primary") %>
   </p>
 
 <% end %>
-<%= link_to 'Back', holidays_path %>
+
+</div>
